🐛 fix dark mode styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,3 +42,7 @@ section#finances a {
 .underline {
     text-decoration-color: rgba(0,0,0,0.2);
 }
+
+html.dark .underline {
+    text-decoration-color: rgba(255,255,255,0.3);
+}
